<resources>
    <string name="app_name">UTM-News</string>
    <string name="hello_world">hei</string>
    <string name="hello_world2">hi2</string>
    <string name="press_to_exit">Apăsați din nou pentru a ieși!</string>
    <string name="start_title">UTM-News</string>
    <string name="home">Acasă</string>
    <string name="search">Caută</string>
    <string name="about">Despre</string>
    <string name="settings">Setări</string>
    <string name="share_title">Noutăți</string>
    <string name="bookmarks">Marcaje</string>
    <string name="categories">Categorii</string>
    <string name="no_mer_data_info">Nu mai există date</string>
    <string name="tags">Etichete</string>
    <string name="search_title">Rezultatele găsite</string>
    <string name="categoru_new_title">Noutăți in categoria dată</string>
    <string name="categories_title">Categorii</string>
    <string name="tag_title">Etichete</string>
    <string name="tag_sewses_title">Noutăți cu eticheta selectată</string>
    <string name="settings_title">Setări</string>
    <string name="news_lastest_title">UTM-News</string>
    <string name="bokmarks_title">Marcaje</string>
    <string name="about_title">Despre</string>
    <string name="db_data_error">Nu mai există date</string>
    <string name="utm_news_navigation_title">UTM-News</string>
    <string name="tab_again_exit_info">Apăsați din nou pentru a ieși!</string>
    <string name="no_net_error">nu este conexiune la internet</string>
    <string name="about_name">Name :</string>
    <string name="about_version">Versiunea :</string>
    <string name="search_hint">Tastează cuvântul cheie</string>
    <string name="empty_list_warn">Lista este goală</string>

    <string name="search_no_results">Nu aveți rezultate pentru căutarea dată</string>
    <string name="empty_bokmark_list">Nu aveți marcaje.
        Puteți adăuga marcaje noi din noutăți</string>
    <string name="boocmark_removed">Marcaj eliminat</string>
    <string name="boocmark_added">Marcaj adăugat</string>
    <string name="empty_news_list">Lista de noutăți este goală. Încercați altă categorie sau etichetă</string>
    <string name="selecteaza_una_din_referintele_de_mai_jos">Selectează una din referințele de mai jos</string>
    <string name="despre_aplicatie">Despre Aplicație</string>
    <string name="despre_utm">Despre UTM</string>
    <string name="terment_si_conditii">Termeni și condiții</string>
    <string name="contacte">Contacte</string>
    <string name="loaging_categories_info">Se încarcă categoriile</string>
    <string name="error_loading_categories">Nu se poate obține categoriile</string>


</resources>
