<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home"/>

        <item
            android:id="@+id/menu_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories"/>

        <item
            android:id="@+id/menu_tags"
            android:icon="@drawable/ic_tag"
            android:title="@string/tags"/>

        <item
            android:id="@+id/menu_bookmarks"
            android:icon="@drawable/ic_bookmarcs_white"
            android:title="@string/bookmarks"/>
    </group>

    <group >
        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_about"
            android:title="@string/about"/>

        <!--<item-->
            <!--android:id="@+id/menu_settings"-->
            <!--android:icon="@drawable/ic_settings"-->
            <!--android:title="@string/settings"/>-->
    </group>
</menu>